Fix z-index of labels

--- a/src/scripts/components/map/stage/label.scss
+++ b/src/scripts/components/map/stage/label.scss
@@ -4,7 +4,7 @@
   position: absolute;
   text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
   transition: opacity 0.2s ease-in .75s;
-  z-index: 1;
+  z-index: 2;
 
   &.touch-device {
     transition-delay: 0s;
